oauth2-proxy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    selector: oauth2-proxy
  type: ClusterIP
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
